alacritty: newline after clear to reset prompt

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -838,6 +838,7 @@ key_bindings:
 
   # externally clear the terminal and history only in "normal" mode
   - { key: L,     mods: Control|Shift,  mode: ~AppCursor|~AppKeypad|~Search|~Alt|~Vi, command: { program: "alacritty-clear", } }
+  - { key: L,     mods: Control|Shift,  mode: ~AppCursor|~AppKeypad|~Search|~Alt|~Vi, chars: "\x0d" } 
 
   - { key: N,     mods: Shift|Control,                      command: { program: "term", } }
 
