Revert "slack: simpler startup flags, remove unused electron flags"
This reverts commit 7b9593158cc0fd21d9882bd5edeb239089ebdfc2.

--- a/local/share/applications/slack.x11.desktop
+++ b/local/share/applications/slack.x11.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Name=Slack Wayland
+Name=Slack X11
 StartupWMClass=Slack
 Comment=Slack Desktop
 GenericName=Slack Client for Linux
-Exec=/usr/bin/slack --enable-features=UseOzonePlatform,WebRTCPipeWireCapturer --ozone-platform=wayland -s %U
+Exec=/usr/bin/slack --enable-features=UseOzonePlatform,WebRTCPipeWireCapturer --ozone-platform=x11 -s %U
 Icon=slack
 Type=Application
 StartupNotify=true
