--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -22,8 +22,7 @@ env:
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
   #
-  # alacritty-direct is problematic for some terminal apps like cmus
-  TERM: alacritty
+  TERM: alacritty-direct
 
 window:
   # Window dimensions (changes require restart)
