waybar: allow river tag clicks

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -16,7 +16,7 @@
     "spacing": 6
   },
   "river/tags": {
-    "disable-click": true,
+    "disable-click": false,
     "num-tags": 10
   },
   "river/layout": {
