rcm: nicer base16 prompts

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,7 @@ set -g set-titles on
 set -g set-titles-string "#{pane_title}"
 
 # host/root colour
-set -g status-style bg="${PROMPT_COL_NAME}",fg=black
+set -g status-style bg="${HL_NAME}",fg=black
 
 # just the title, the rest is truncated noise
 set -g status-format "#{pane_title}"
