rcm: style tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,8 +4,8 @@ set -g set-titles on
 # pane_title captures the xterm escape sent by the shell; rest is noise
 set -g set-titles-string "#{pane_title}"
 
-# host/root colour
-set -g status-style bg="${HL_NAME}",fg=black
+# host/root colour, 19 is selection background
+set -g status-style fg="bright${HL_NAME}",bg=color19
 
 # just the title, the rest is truncated noise
 set -g status-format "#{pane_title}"
