--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -18,7 +18,7 @@ SCALE:
     SCALE: 1.75
   - NAME_DESC: Sharp Corporation 0x148D
     SCALE: 2
-  - NAME_DESC: C34J79x
+  - NAME_DESC: Samsung Electric Company C34J79x
     SCALE: 1
 MODE:
   - NAME_DESC: MAG274QRF-QD
