billion router uses VDSL

--- a/misc/BiPAC_8900AX2400.conf
+++ b/misc/BiPAC_8900AX2400.conf
@@ -26,7 +26,7 @@
     </X_BROADCOM_COM_LoginCfg>
     <X_BROADCOM_COM_AppCfg>
       <DnsProxyCfg>
-        <DeviceDomainName>courtis.net</DeviceDomainName>
+        <DeviceDomainName>local</DeviceDomainName>
         <DeviceHostName>router</DeviceHostName>
       </DnsProxyCfg>
     </X_BROADCOM_COM_AppCfg>
@@ -36,7 +36,7 @@
       <IfName>(null)</IfName>
     </X_BROADCOM_COM_EthernetSwitch>
     <ManagementServer>
-      <PeriodicInformTime>2023-10-29T17:54:05+00:00</PeriodicInformTime>
+      <PeriodicInformTime>2023-10-30T09:58:28+00:00</PeriodicInformTime>
     </ManagementServer>
     <Time>
       <Enable>TRUE</Enable>
@@ -46,14 +46,14 @@
       <NTPServer4>3.au.pool.ntp.org</NTPServer4>
       <LocalTimeZone>&#32;10:00</LocalTimeZone>
       <LocalTimeZoneName>Canberra,&#32;Melbourne,&#32;Sydney</LocalTimeZoneName>
-      <DaylightSavingsStart>2023-10-29T17:31:37+00:00</DaylightSavingsStart>
-      <DaylightSavingsEnd>2023-10-29T17:31:37+00:00</DaylightSavingsEnd>
+      <DaylightSavingsStart>2023-10-30T09:56:33+00:00</DaylightSavingsStart>
+      <DaylightSavingsEnd>2023-10-30T09:56:33+00:00</DaylightSavingsEnd>
     </Time>
     <Layer2Bridging>
       <BridgeNumberOfEntries>1</BridgeNumberOfEntries>
-      <FilterNumberOfEntries>13</FilterNumberOfEntries>
+      <FilterNumberOfEntries>14</FilterNumberOfEntries>
       <MarkingNumberOfEntries>0</MarkingNumberOfEntries>
-      <AvailableInterfaceNumberOfEntries>10</AvailableInterfaceNumberOfEntries>
+      <AvailableInterfaceNumberOfEntries>11</AvailableInterfaceNumberOfEntries>
       <Bridge instance="1">
         <BridgeKey>0</BridgeKey>
         <BridgeEnable>TRUE</BridgeEnable>
@@ -135,7 +135,13 @@
         <FilterBridgeReference>0</FilterBridgeReference>
         <FilterInterface>12</FilterInterface>
       </Filter>
-      <Filter nextInstance="16"></Filter>
+      <Filter instance="16">
+        <FilterKey>16</FilterKey>
+        <FilterEnable>TRUE</FilterEnable>
+        <FilterBridgeReference>0</FilterBridgeReference>
+        <FilterInterface>13</FilterInterface>
+      </Filter>
+      <Filter nextInstance="17"></Filter>
       <AvailableInterface instance="1">
         <AvailableInterfaceKey>1</AvailableInterfaceKey>
         <InterfaceType>LANInterface</InterfaceType>
@@ -186,14 +192,19 @@
         <InterfaceType>WANInterface</InterfaceType>
         <InterfaceReference>InternetGatewayDevice.WANDevice.3.WANConnectionDevice.1.WANIPConnection.1</InterfaceReference>
       </AvailableInterface>
-      <AvailableInterface nextInstance="13"></AvailableInterface>
+      <AvailableInterface instance="13">
+        <AvailableInterfaceKey>13</AvailableInterfaceKey>
+        <InterfaceType>WANInterface</InterfaceType>
+        <InterfaceReference>InternetGatewayDevice.WANDevice.2.WANConnectionDevice.1.WANIPConnection.1</InterfaceReference>
+      </AvailableInterface>
+      <AvailableInterface nextInstance="14"></AvailableInterface>
     </Layer2Bridging>
     <QueueManagement>
       <ClassificationNumberOfEntries>0</ClassificationNumberOfEntries>
       <AppNumberOfEntries>0</AppNumberOfEntries>
       <FlowNumberOfEntries>0</FlowNumberOfEntries>
       <PolicerNumberOfEntries>0</PolicerNumberOfEntries>
-      <QueueNumberOfEntries>34</QueueNumberOfEntries>
+      <QueueNumberOfEntries>35</QueueNumberOfEntries>
       <Queue instance="1">
         <QueueEnable>TRUE</QueueEnable>
         <QueueInterface>InternetGatewayDevice.LANDevice.1.WLANConfiguration.1.X_BROADCOM_COM_WlanAdapter.WlVirtIntfCfg.1</QueueInterface>
@@ -404,7 +415,23 @@
         <X_BROADCOM_COM_QueueName>QoS_Upstream</X_BROADCOM_COM_QueueName>
         <X_BROADCOM_COM_QueueId>1</X_BROADCOM_COM_QueueId>
       </Queue>
-      <Queue nextInstance="36"></Queue>
+      <Queue instance="36">
+        <QueueEnable>TRUE</QueueEnable>
+        <QueueInterface>InternetGatewayDevice.WANDevice.2.WANConnectionDevice.1.WANPTMLinkConfig</QueueInterface>
+        <QueueWeight>1</QueueWeight>
+        <QueuePrecedence>8</QueuePrecedence>
+        <SchedulerAlgorithm>WRR</SchedulerAlgorithm>
+        <X_BROADCOM_COM_QueueName>Default&#32;Queue</X_BROADCOM_COM_QueueName>
+        <X_BROADCOM_COM_DslLatency>0</X_BROADCOM_COM_DslLatency>
+        <X_BROADCOM_COM_PtmPriority>0</X_BROADCOM_COM_PtmPriority>
+        <X_BROADCOM_COM_QueueId>1</X_BROADCOM_COM_QueueId>
+      </Queue>
+      <Queue nextInstance="37"></Queue>
+      <QueueStats instance="1">
+        <QueueInterface>InternetGatewayDevice.WANDevice.2.WANConnectionDevice.1.WANPTMLinkConfig</QueueInterface>
+        <X_BROADCOM_COM_QueueId>1</X_BROADCOM_COM_QueueId>
+      </QueueStats>
+      <QueueStats nextInstance="2"></QueueStats>
     </QueueManagement>
     <LANDevice instance="1">
       <LANEthernetInterfaceNumberOfEntries>5</LANEthernetInterfaceNumberOfEntries>
@@ -416,7 +443,7 @@
       </X_VENDOR_WLANTimeSchedule>
       <LANHostConfigManagement>
         <DHCPServerEnable>TRUE</DHCPServerEnable>
-        <MinAddress>192.168.1.101</MinAddress>
+        <MinAddress>192.168.1.201</MinAddress>
         <DNSServers>192.168.1.1,192.168.1.1</DNSServers>
         <DHCPLeaseTime>3600</DHCPLeaseTime>
         <IPInterfaceNumberOfEntries>1</IPInterfaceNumberOfEntries>
@@ -443,6 +470,12 @@
           <ReservedAddresses>192.168.1.13</ReservedAddresses>
           <HostLabel>lord-ipmi-dedicated</HostLabel>
         </DHCPConditionalServingPool>
+        <DHCPConditionalServingPool instance="4">
+          <Enable>TRUE</Enable>
+          <Chaddr>b4:45:06:b6:69:64</Chaddr>
+          <ReservedAddresses>192.168.1.21</ReservedAddresses>
+          <HostLabel>dock</HostLabel>
+        </DHCPConditionalServingPool>
         <DHCPConditionalServingPool instance="5">
           <Enable>TRUE</Enable>
           <Chaddr>10:7B:44:93:A5:6D</Chaddr>
@@ -451,15 +484,21 @@
         </DHCPConditionalServingPool>
         <DHCPConditionalServingPool instance="6">
           <Enable>TRUE</Enable>
-          <Chaddr>3C:58:C2:F0:D4:F8</Chaddr>
+          <Chaddr>3c:58:c2:f0:d4:f8</Chaddr>
           <ReservedAddresses>192.168.1.41</ReservedAddresses>
           <HostLabel>dukew</HostLabel>
         </DHCPConditionalServingPool>
         <DHCPConditionalServingPool instance="7">
           <Enable>TRUE</Enable>
-          <Chaddr>00:2B:67:4F:AE:CA</Chaddr>
+          <Chaddr>00:2b:67:4f:ae:ca</Chaddr>
           <ReservedAddresses>192.168.1.42</ReservedAddresses>
           <HostLabel>duke</HostLabel>
+        </DHCPConditionalServingPool>
+        <DHCPConditionalServingPool instance="8">
+          <Enable>TRUE</Enable>
+          <Chaddr>70:85:c2:59:e2:7d</Chaddr>
+          <ReservedAddresses>192.168.1.51</ReservedAddresses>
+          <HostLabel>tinygod1</HostLabel>
         </DHCPConditionalServingPool>
         <DHCPConditionalServingPool instance="9">
           <Enable>TRUE</Enable>
@@ -497,19 +536,7 @@
           <ReservedAddresses>192.168.1.82</ReservedAddresses>
           <HostLabel>zima2</HostLabel>
         </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="15">
-          <Enable>TRUE</Enable>
-          <Chaddr>b4:45:06:b6:69:64</Chaddr>
-          <ReservedAddresses>192.168.1.21</ReservedAddresses>
-          <HostLabel>dock</HostLabel>
-        </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="16">
-          <Enable>TRUE</Enable>
-          <Chaddr>70:85:c2:59:e2:7d</Chaddr>
-          <ReservedAddresses>192.168.1.51</ReservedAddresses>
-          <HostLabel>tinygod</HostLabel>
-        </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool nextInstance="17"></DHCPConditionalServingPool>
+        <DHCPConditionalServingPool nextInstance="15"></DHCPConditionalServingPool>
       </LANHostConfigManagement>
       <X_BROADCOM_COM_IPv6LANHostConfigManagement>
         <DHCPv6ServerEnable>FALSE</DHCPv6ServerEnable>
@@ -563,6 +590,7 @@
         <RegulatoryDomain>AU</RegulatoryDomain>
         <PeerBSSID>NOS</PeerBSSID>
         <AuthenticationServiceMode>NOS</AuthenticationServiceMode>
+        <X_BROADCOM_COM_HideSSID>FALSE</X_BROADCOM_COM_HideSSID>
         <X_BROADCOM_COM_GuestSSID>wl0_Guest1</X_BROADCOM_COM_GuestSSID>
         <X_BROADCOM_COM_GuestEnable>FALSE</X_BROADCOM_COM_GuestEnable>
         <X_BROADCOM_COM_GuestHiden>FALSE</X_BROADCOM_COM_GuestHiden>
@@ -575,7 +603,7 @@
         <X_BROADCOM_COM_Guest2Enable>FALSE</X_BROADCOM_COM_Guest2Enable>
         <X_BROADCOM_COM_Guest2Hiden>FALSE</X_BROADCOM_COM_Guest2Hiden>
         <X_BROADCOM_COM_Guest2IsolateClients>FALSE</X_BROADCOM_COM_Guest2IsolateClients>
-        <AssociatedDevice nextInstance="5"></AssociatedDevice>
+        <AssociatedDevice nextInstance="44"></AssociatedDevice>
         <WEPKey instance="1">
           <WEPKey>1234567890123</WEPKey>
         </WEPKey>
@@ -624,12 +652,34 @@
             <WlWpa>tkip+aes</WlWpa>
             <WlAuthMode>psk&#32;psk2</WlAuthMode>
             <WlMFP>0</WlMFP>
+            <WlAPIsolation>1</WlAPIsolation>
             <WlFltMacMode>allow</WlFltMacMode>
-            <WlMacFltCfg instance="9">
+            <WlMacFltCfg instance="55">
               <WlMacAddr>58:B0:D4:69:29:56</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg nextInstance="10"></WlMacFltCfg>
+            <WlMacFltCfg instance="56">
+              <WlMacAddr>50:5A:65:60:76:61</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
+              <WlIfcname>wl0</WlIfcname>
+            </WlMacFltCfg>
+            <WlMacFltCfg instance="57">
+              <WlMacAddr>58:A0:23:CF:E6:8A</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
+              <WlIfcname>wl0</WlIfcname>
+            </WlMacFltCfg>
+            <WlMacFltCfg instance="58">
+              <WlMacAddr>3C:58:C2:F0:D4:F8</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
+              <WlIfcname>wl0</WlIfcname>
+            </WlMacFltCfg>
+            <WlMacFltCfg instance="59">
+              <WlMacAddr>64:A2:F9:12:F0:EA</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
+              <WlIfcname>wl0</WlIfcname>
+            </WlMacFltCfg>
+            <WlMacFltCfg nextInstance="60"></WlMacFltCfg>
             <WlKey64Cfg instance="1">
             </WlKey64Cfg>
             <WlKey64Cfg instance="2">
@@ -729,7 +779,7 @@
       <WLANConfiguration nextInstance="2"></WLANConfiguration>
       <X_VENDOR_WlanConfiguration instance="1">
         <IfName>wl1</IfName>
-        <HideSSID>TRUE</HideSSID>
+        <IsolateClients>TRUE</IsolateClients>
         <SSID>royalty5</SSID>
         <BSSID>60:03:47:55:67:3B</BSSID>
         <CountryCode>au</CountryCode>
@@ -753,7 +803,7 @@
           <WlBssMacAddr>60:03:47:55:67:3B</WlBssMacAddr>
           <WlWpaPsk>XXXXXXXXXXXXXXX</WlWpaPsk>
           <WlAuthMode>psk&#32;psk2</WlAuthMode>
-          <WlHide>TRUE</WlHide>
+          <WlAPIsolation>TRUE</WlAPIsolation>
           <WlFltMacMode>allow</WlFltMacMode>
           <X_VENDOR_WlMacFltCfg instance="3">
             <enable>TRUE</enable>
@@ -767,11 +817,15 @@
             <enable>TRUE</enable>
             <WlMacAddr>50:5A:65:60:76:61</WlMacAddr>
           </X_VENDOR_WlMacFltCfg>
-          <X_VENDOR_WlMacFltCfg instance="6">
+          <X_VENDOR_WlMacFltCfg instance="7">
             <enable>TRUE</enable>
-            <WlMacAddr>CA:BA:10:10:E5:58</WlMacAddr>
+            <WlMacAddr>64:A2:F9:12:F0:EA</WlMacAddr>
           </X_VENDOR_WlMacFltCfg>
-          <X_VENDOR_WlMacFltCfg nextInstance="7"></X_VENDOR_WlMacFltCfg>
+          <X_VENDOR_WlMacFltCfg instance="8">
+            <enable>TRUE</enable>
+            <WlMacAddr>58:B0:D4:69:29:56</WlMacAddr>
+          </X_VENDOR_WlMacFltCfg>
+          <X_VENDOR_WlMacFltCfg nextInstance="9"></X_VENDOR_WlMacFltCfg>
           <X_VENDOR_WlWpsCfg>
             <wlWscDevPin>12345670</wlWscDevPin>
           </X_VENDOR_WlWpsCfg>
@@ -825,7 +879,7 @@
       </X_VENDOR_WlanConfiguration>
       <X_VENDOR_WlanConfiguration nextInstance="2"></X_VENDOR_WlanConfiguration>
       <Hosts>
-        <Host nextInstance="14"></Host>
+        <Host nextInstance="19"></Host>
       </Hosts>
     </LANDevice>
     <LANDevice nextInstance="2"></LANDevice>
@@ -881,15 +935,19 @@
       <X_BROADCOM_COM_XTM_Interface_Stats nextInstance="5"></X_BROADCOM_COM_XTM_Interface_Stats>
       <WANDSLInterfaceConfig>
         <Enable>TRUE</Enable>
-        <X_BROADCOM_COM_ADSL2_AnnexM>TRUE</X_BROADCOM_COM_ADSL2_AnnexM>
-        <X_BROADCOM_COM_SRA>On</X_BROADCOM_COM_SRA>
-        <X_VENDOR_PhyR>PhyRBoth</X_VENDOR_PhyR>
+        <X_BROADCOM_COM_AdslModulationCfg>VDSL2</X_BROADCOM_COM_AdslModulationCfg>
         <X_VENDOR_TpsTc>14</X_VENDOR_TpsTc>
+        <X_BROADCOM_COM_VDSL_8a>FALSE</X_BROADCOM_COM_VDSL_8a>
+        <X_BROADCOM_COM_VDSL_8b>FALSE</X_BROADCOM_COM_VDSL_8b>
+        <X_BROADCOM_COM_VDSL_8c>FALSE</X_BROADCOM_COM_VDSL_8c>
+        <X_BROADCOM_COM_VDSL_8d>FALSE</X_BROADCOM_COM_VDSL_8d>
+        <X_BROADCOM_COM_VDSL_12a>FALSE</X_BROADCOM_COM_VDSL_12a>
+        <X_BROADCOM_COM_VDSL_12b>FALSE</X_BROADCOM_COM_VDSL_12b>
       </WANDSLInterfaceConfig>
       <WANConnectionDevice nextInstance="2"></WANConnectionDevice>
     </WANDevice>
     <WANDevice instance="2">
-      <WANConnectionNumberOfEntries>0</WANConnectionNumberOfEntries>
+      <WANConnectionNumberOfEntries>1</WANConnectionNumberOfEntries>
       <WANCommonInterfaceConfig>
         <WANAccessType>DSL</WANAccessType>
       </WANCommonInterfaceConfig>
@@ -904,9 +962,39 @@
       <X_BROADCOM_COM_XTM_Interface_Stats nextInstance="5"></X_BROADCOM_COM_XTM_Interface_Stats>
       <WANDSLInterfaceConfig>
         <Enable>TRUE</Enable>
+        <dslptm>TRUE</dslptm>
+        <dsltime>340</dsltime>
+        <dslup>TRUE</dslup>
         <LinkEncapsulationUsed>G.993.2_Annex_K_PTM</LinkEncapsulationUsed>
         <X_VENDOR_TpsTc>14</X_VENDOR_TpsTc>
       </WANDSLInterfaceConfig>
+      <WANConnectionDevice instance="1">
+        <WANIPConnectionNumberOfEntries>1</WANIPConnectionNumberOfEntries>
+        <WANPPPConnectionNumberOfEntries>0</WANPPPConnectionNumberOfEntries>
+        <WANPTMLinkConfig>
+          <Enable>TRUE</Enable>
+          <X_BROADCOM_COM_PTMPriorityHigh>TRUE</X_BROADCOM_COM_PTMPriorityHigh>
+          <X_BROADCOM_COM_PTMEnbQos>TRUE</X_BROADCOM_COM_PTMEnbQos>
+          <X_BROADCOM_COM_GrpPrecedence>8</X_BROADCOM_COM_GrpPrecedence>
+          <X_BROADCOM_COM_QueuePrecedence>8</X_BROADCOM_COM_QueuePrecedence>
+          <X_BROADCOM_COM_ConnectionMode>VlanMuxMode</X_BROADCOM_COM_ConnectionMode>
+          <X_BROADCOM_COM_IfName>ptm0</X_BROADCOM_COM_IfName>
+        </WANPTMLinkConfig>
+        <WANIPConnection instance="1">
+          <Enable>TRUE</Enable>
+          <ConnectionType>IP_Routed</ConnectionType>
+          <Name>ipoe_0_1_1</Name>
+          <NATEnabled>TRUE</NATEnabled>
+          <X_BROADCOM_COM_FirewallEnabled>TRUE</X_BROADCOM_COM_FirewallEnabled>
+          <X_VENDOR_MaxMTUSize>1500</X_VENDOR_MaxMTUSize>
+          <MACAddress>60:03:47:55:67:3f</MACAddress>
+          <X_BROADCOM_COM_IfName>ptm0.1</X_BROADCOM_COM_IfName>
+          <X_BROADCOM_COM_ConnectionId>1</X_BROADCOM_COM_ConnectionId>
+          <PortMappingNumberOfEntries>0</PortMappingNumberOfEntries>
+        </WANIPConnection>
+        <WANIPConnection nextInstance="2"></WANIPConnection>
+      </WANConnectionDevice>
+      <WANConnectionDevice nextInstance="2"></WANConnectionDevice>
     </WANDevice>
     <WANDevice instance="3">
       <WANConnectionNumberOfEntries>1</WANConnectionNumberOfEntries>
@@ -987,8 +1075,8 @@
     </WANDevice>
     <Layer3Forwarding>
       <ForwardNumberOfEntries>0</ForwardNumberOfEntries>
-      <X_BROADCOM_COM_DefaultConnectionServices>eth5.1</X_BROADCOM_COM_DefaultConnectionServices>
-      <X_VENDOR_VirtualDefaultGateway>eth5.1,USB3G0</X_VENDOR_VirtualDefaultGateway>
+      <X_BROADCOM_COM_DefaultConnectionServices>ptm0.1,eth5.1,usb0</X_BROADCOM_COM_DefaultConnectionServices>
+      <X_VENDOR_VirtualDefaultGateway>ptm0.1,eth5.1,usb0</X_VENDOR_VirtualDefaultGateway>
     </Layer3Forwarding>
     <X_BROADCOM_COM_IPv6Layer3Forwarding>
       <ForwardNumberOfEntries>0</ForwardNumberOfEntries>
@@ -1002,7 +1090,8 @@
       <StorageService nextInstance="2"></StorageService>
     </Services>
     <X_BROADCOM_COM_NetworkConfig>
-      <DNSServers>10.1.1.1</DNSServers>
+      <DNSIfName>ptm0.1</DNSIfName>
+      <X_VENDOR_VirtualDNSIfName>ptm0.1</X_VENDOR_VirtualDNSIfName>
     </X_BROADCOM_COM_NetworkConfig>
     <X_BROADCOM_COM_IGMPCfg>
       <IgmpBridgeIfNames>br0&#32;</IgmpBridgeIfNames>
@@ -1015,6 +1104,63 @@
       <MaxReportSamples>0</MaxReportSamples>
       <SampleSetNumberOfEntries>0</SampleSetNumberOfEntries>
     </PeriodicStatistics>
+    <X_VENDOR_StaticDNSHost instance="1">
+      <Hostname>lord</Hostname>
+      <IpAddress>192.168.1.11</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="2">
+      <Hostname>lord-ipmi-shared</Hostname>
+      <IpAddress>192.168.1.12</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="3">
+      <Hostname>lord-ipmi-dedicated</Hostname>
+      <IpAddress>192.168.1.13</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="4">
+      <Hostname>dock</Hostname>
+      <IpAddress>192.168.1.21</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="5">
+      <Hostname>emperor</Hostname>
+      <IpAddress>192.168.1.31</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="6">
+      <Hostname>dukew</Hostname>
+      <IpAddress>192.168.1.41</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="7">
+      <Hostname>duke</Hostname>
+      <IpAddress>192.168.1.42</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="8">
+      <Hostname>tinygod1</Hostname>
+      <IpAddress>192.168.1.51</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="9">
+      <Hostname>tinygod2</Hostname>
+      <IpAddress>192.168.1.52</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="10">
+      <Hostname>gigantorw</Hostname>
+      <IpAddress>192.168.1.61</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="11">
+      <Hostname>gigantori</Hostname>
+      <IpAddress>192.168.1.62</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="12">
+      <Hostname>deckw</Hostname>
+      <IpAddress>192.168.1.71</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="13">
+      <Hostname>zima1</Hostname>
+      <IpAddress>192.168.1.81</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="14">
+      <Hostname>zima2</Hostname>
+      <IpAddress>192.168.1.82</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost nextInstance="15"></X_VENDOR_StaticDNSHost>
   </InternetGatewayDevice>
 </DslCpeConfig>
  
