--- a/ssh/config
+++ b/ssh/config
@@ -2,10 +2,10 @@ Host aur.archlinux.org
   IdentityFile ~/.ssh/id_rsa.aur
   User aur
 
-Host gigantor gigantorw gigantori tinygod tinygod1 tinygod2
+Host gigantor gigantorw gigantori gigantord tinygod tinygod1 tinygod2
   User acourtis
 
-Host deck deckw
+Host deck deckw deckd
   User deck
 
 Host *
