tmux: ' to clear scrollback

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,6 +32,9 @@ bind-key a copy-mode
 # vi copypasta mode
 set-window-option -g mode-keys vi
 
+# scrollback
+bind-key \' send-keys -R C-l \; clear-history
+
 # more vim like selection
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi Y send-keys -X copy-pipe-end-of-line
