--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -5,6 +5,7 @@ ORDER:
   - Unknown 0x05EF
   - ASUS XG32V
   - Ancor Communications Inc ROG PG27AQ
+  - Samsung Electric Company C34J79x
 SCALING: TRUE
 AUTO_SCALE: TRUE
 SCALE:
