way-displays: XG349C scale

--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -21,6 +21,8 @@ SCALE:
     SCALE: 2
   - NAME_DESC: Samsung Electric Company C34J79x
     SCALE: 1
+  - NAME_DESC: ASUSTek COMPUTER INC XG349C
+    SCALE: 1
 MODE:
   - NAME_DESC: MAG274QRF-QD
     WIDTH: 2560
