--- a/config/nvim/.luarc.json
+++ b/config/nvim/.luarc.json
@@ -1,9 +1,10 @@
 {
   "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
   "runtime.version": "Lua 5.1",
-  "diagnostics": {
-    "globals": [
-      "vim"
+  "workspace": {
+    "library": [
+      "$VIMRUNTIME",
+      "${3rd}/luv/library"
     ]
   }
 }
